# libdemo

./: .clang-format  README.md  run.sh
base_repo/: CMakeLists.txt
base_repo/v1/: CMakeLists.txt
base_repo/v1/include/base/: base.h
base_repo/v1/src/: base.cpp
base_repo/v2/: CMakeLists.txt
base_repo/v2/include/base/: base.h
base_repo/v2/src/: base.cpp
client_host/: CMakeLists.txt
client_host/app/: CMakeLists.txt  main.cpp
our_host/: CMakeLists.txt
our_host/wrap/: CMakeLists.txt
our_host/wrap/include/wrap/: wrap.h
our_host/wrap/src/: impl.cpp
